add css & js and link with html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<link rel="stylesheet" type="text/css" href="css/index.css">
+
+<script src="js/index.js"></script>
 
 <html>
 <head>
