--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
         <!-- title of site -->
         <title>Debbie Chen</title>
 
-        <!-- For favicon png -->
+        <!-- For favicon png 
 		<link rel="shortcut icon" type="image/icon" href="assets/logo/favicon.png"/>
+		-->
        
         <!--font-awesome.min.css-->
         <link rel="stylesheet" href="assets/css/font-awesome.min.css">
