--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 			                	<li class="smooth-menu"><a href="#about">intro</a></li>
 			                    <li class=" smooth-menu"><a href="#education">education</a></li>
 			                    <li class="smooth-menu"><a href="#portfolio">portfolio</a></li>
+			                    <li class="smooth-menu"><a href="#publication">publications</a></li>
 			                    <li class="smooth-menu"><a href="#skills">skills</a></li>
 			                    <li class="smooth-menu"><a href="#contact">contact</a></li>
 <!--
@@ -386,15 +387,15 @@
 
 							</div><!-- /.row -->
 
-							<div class="row">
-								<h3>UI/UX Design</h3> <!--UI/UX Design-->
+							<div class="row"> <!--UI/UX Design-->
+								<h3>UI/UX Design</h3> 
 
 								<div class="col-sm-4">
 									<div class="item">
 										<img src="img/portfolio/u6_app.png" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<a href="#">
-												App Analysis
+												Usability Testing
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
@@ -402,7 +403,7 @@
 										<img src="img/portfolio/u3_hospital.png" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<button type="button" data-toggle="modal" data-target="#hospital">
-												Hospital Regestration
+												Prototyping
 											</button>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
@@ -413,7 +414,7 @@
 										<img src="img/portfolio/u5_supermarket.png" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<button type="button" data-toggle="modal" data-target="#supermarket">
-												Supermarket version
+												Journey Map/ Affinity Diagram
 											</button>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
@@ -421,7 +422,7 @@
 										<img src="img/portfolio/u2_concert.png" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<a href="#">
-												design thinking concert
+												design thinking
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
@@ -432,7 +433,7 @@
 										<img src="img/portfolio/u4_cuecard.png" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<a href="#">
-												Cue Card
+												Field Exploration/ Persona/ Prototyping
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
@@ -440,11 +441,11 @@
 										<img src="img/portfolio/u1_hotel.png" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<a href="#">
-												Hotel Picker
+												Persona/ Information Architecture
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
-								</div><!-- /.col -->
+								</div><!-- /.col --><!--UI/UX Design-->
 
 							</div><!-- /.row -->
 
@@ -457,6 +458,26 @@
 
 		</section><!--/.portfolio-->
 		<!--portfolio end -->
+
+		<section id="publication" class="publication">
+			<div class="section-heading text-center">
+				<h2>Publications</h2>
+			</div>
+			<div class="container">
+				<div class="publication-content">
+					<div class="Conference single-about-txt2">
+						<h3>Conference Paper</h3>
+						<p><b>Chen, T. Y.</b>, Liu, H. C., Hsu, C. Y.(2017, November). Film language analysis in society news-A case study of The New York Times. <i>In 2017 PNC Annual Conference and Joint Meetings.</i> Tainan, Taiwan. <a href="https://ieeexplore.ieee.org/abstract/document/8203523" target="_blank">  Article</a></p>
+						<p>Chou, K. T., Hou, H., Shen, M., <b>Chen, T. Y.</b>, Liu, C., & Wu, P. J. (2016, May). Human and Dog: Explore the Game Design of Unequal Communicative Patterns.<i> In Proceedings of the 2016 CHI Conference Extended Abstracts on Human Factors in Computing Systems</i> (pp. 156-159). ACM. <a href="https://dl.acm.org/citation.cfm?id=2851581.2890373" target="_blank"> Article</a></p>
+					</div>
+					<div class="Poster single-about-txt2">
+						<h3>Poster</h3>
+						<p>Hsu, C. Y., <b>Chen, T. Y.</b>, Liu, H. C.(2017, August). Film language analysis in society news-A case study of The New York Times. Paper accepted for Poster Presentation at TAICHI'17. Tainan, Taiwan.</p>
+						<p><b>Chen, T.-Y.</b>, Chou, W.-Y., Hsu, C.-Y., Wong, C.-A., Kuo, C.-J. & Lin, W. (2016, August). Cue Card - Bus Availability Reminder, Paper accepted for Poster Presentation at TAICHI'16, Taipei, Taiwan.</p>
+					</div>
+				</div>
+			</div>
+		</section>
 
 				<!--skills start -->
 		<section id="skills" class="skills">
