add portfolio chicken game detail

--- a/index.html
+++ b/index.html
@@ -789,7 +789,9 @@
 
         		<h3>My Role</h3>
         		<p>
-        			
+        			In the process, because the three people in our group are all students in department of library and information science, we decided to do a game to explain the freedom of knowledge, let everyone know the valuables of the library, and then we decided the theme and script together. 
+        			<br>
+					Finally, in the implementation, I was responsible for writing the details of the script, introducing the dialogue system Fungus, and also using Github for version control in the process.
         		</p>
         		<br>
 
@@ -824,9 +826,33 @@
       		</div>
 
       		<div class="modal-body" >
-        		This is a serious game.
+      			<h3>Description</h3>
+      			<p>
+      				This is a serious game talking about the knowledge of rooster and eggs. In the AR course, we will think about how AR's technology can achieve the role of the museum and help the museum's exhibit content to interact more closely with the audience.
+      			</p>
         		<br>
-        		
+        		<h3>My Role</h3>
+        		<p>
+        			In the process, we did a detailed study on the knowledge of pheasants and eggs, including searching for literature and asking experts and scholars, as well as understanding the relevant instruments.
+        			<br>
+        			<img class="min pimg" src="img/portfolio/g2_role1.png">
+        			<img class="min pimg" src="img/portfolio/g2_role2.png">
+        			<img class="min pimg" src="img/portfolio/g2_role3.png">
+        			<img class="min pimg" src="img/portfolio/g2_role4.png">
+        			<br>
+					Then, based on the knowledge gained, we extract the most important details of the knowledge and try to integrate it into the game so that the game can achieve educational and entertaining effects.
+					<br>
+					<img class="min pimg" src="img/portfolio/g2_role5.png">
+					<img class="min pimg" src="img/portfolio/g2_role6.png">
+					<img class="min pimg" src="img/portfolio/g2_role7.png">
+					<img class="min pimg" src="img/portfolio/g2_role8.png">
+        		</p>
+        		<br>
+        		<h3>What I have learned</h3>
+        		<p>
+        			I think this is the first time I use the game as a medium to convey knowledge. Although I don't think it has reached the level of my ideal educational game, because it is not interesting enough. However, it is my first time to understand the details and accuracy of educational games should not to be ignored.
+        		</p>
+        		<a href="download/g2_final.zip" download>download final prototype zip file</a>
 
       		</div>
 
