redesign the index.html of UI/UX portfolio / add lots of description and connect to different webpage

--- a/UXportfolio_concert.html
+++ b/UXportfolio_concert.html
@@ -200,7 +200,7 @@
 					<p>
 						&copy; copyright Debbie Chen. design and developed by <a href="https://www.themesine.com/">themesine</a>
 						<br>
-						latest version: 2019/2/9 21:10 GMT+8:00
+						latest version: 2019/10/7 16:10 GMT-5:00
 					</p><!--/p-->
 					
 				</div><!--/.text-center-->
