modified the index

--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
 									<div class="item">
 										<img src="img/portfolio/u1_hotel.png" alt="portfolio image"/>
 										<div class="isotope-overlay">
-											<a href="UXportfolio_cuecard.html">
+											<a href="UXportfolio_hotel.html">
 												<h4>Hotel Picker</h3>
 												
 												<h5> It is a project that we redesigned the website of booking hotels. </h5>
@@ -873,7 +873,7 @@
 					<p>
 						&copy; copyright Debbie Chen. design and developed by <a href="https://www.themesine.com/">themesine</a>
 						<br>
-						latest version: 2019/10/7 15:30 GMT-5:00
+						latest version: 2019/10/7 18:08 GMT-5:00
 					</p><!--/p-->
 					
 				</div><!--/.text-center-->
