fix small problem

--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 											<a href="https://yuan00611.github.io/Crowdsourcing-Final-Project/">
 												<h4>Crowdsourcing Test for Image Caption</h3>
 												
-												<h5> It is a crowdsorcing test websit for workers to mark important element. We hope to gain these data from AMT platform to facilitate machine learning for blindness. </h5>
+												<h5> It is a crowdsorcing test website for workers to mark important elements. We hope to gain these data from AMT platform to facilitate machine learning for the blindness. </h5>
 
 												<p> HTML, CSS, JavaScript, jQuery, AMT API, Node.js</p>
 
@@ -1005,7 +1005,7 @@
       			<a href="https://github.com/yuan00611/ElderlySmartHomeCollaborationTool" target="_blank">Github</a>
 
         		<br>
-        		<iframe width="640" height="360" src="https://www.youtube.com/embed/zbuO-X-09t8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        		<iframe width="600" height="340" src="https://www.youtube.com/embed/zbuO-X-09t8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
       		</div>
 
