add UX_hospital portfolio part

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 									I am focus on Human Computer Interaction and interested in Front-End Development, Game Design, UI/UX Design and Data Analyst.
 								</h3>
 								<p>
-									For me, I especially want to convey interesting knowledge and solve human communication problems through all the media, like website, game and technology, so as to empower vulnerable groups to express themselves and receive knowledge.
+									For me, I especially want to convey interesting knowledge through all the fantastic media, like website, game, XR and technology, so as to empower vulnerable groups to express themselves and receive knowledge.
 									<br>
 									I hope I can have chances to explore the possibilities of innovative technology and design a touching game to let people have confidence to break through the existing framework and create their own dreams and future.
 								</p>
