add data portfolio in comfort level and weather

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 				<!-- Tab links -->
 				<div class="tab">
 					<button class="tablinks active" onclick="portfolioCategory(event, 'frontend')">Full Stack</button>
-					<button class="tablinks" onclick="portfolioCategory(event, 'uiux')">UI/UX</button>
+					<!-- <button class="tablinks" onclick="portfolioCategory(event, 'uiux')">UI/UX</button> -->
 					<button class="tablinks" onclick="portfolioCategory(event, 'game')">Game/VR/AR</button>
 					<button class="tablinks" onclick="portfolioCategory(event, 'data')">Data</button>
 					<button class="tablinks" onclick="portfolioCategory(event, 'anim')">Animation</button>
@@ -656,8 +656,12 @@
 									<div class="item">
 										<img src="img/portfolio/d2_taipeicity.png" alt="portfolio image"/>
 										<div class="isotope-overlay">
-											<a href="#">
-												ui/ux design
+											<a href="document/taipelCity.pdf">
+												<h4>Comfort Level Analysis for Taipei District</h3>
+												
+												<h5> We try to use 5 factors(public security/ medical resource/ education/ environment/ traffic) to rate the comfort level of the 12 districts in Taipei. </h5>
+
+												<p> R, Shiny</p>
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
@@ -679,8 +683,12 @@
 									<div class="item">
 										<img src="img/portfolio/d1_weather.png" alt="portfolio image"/>
 										<div class="isotope-overlay">
-											<a href="#">
-												Taipe City Analysis
+											<a href="document/weather.pdf">
+												<h4>Correlation between emotion and weather</h3>
+												
+												<h5> We try to check whether the emotional text in Twitter has the correlation with the weather or not. We use Python to crawl the data from Twitter and use R for statistical analysis. </h5>
+
+												<p> Python(BeautifulSoup, Selenium), R, LIWC, Correlation</p>
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
