--- a/index.html
+++ b/index.html
@@ -317,9 +317,9 @@
 				<!-- Tab links -->
 				<div class="tab">
 					<button class="tablinks active" onclick="portfolioCategory(event, 'frontend')">Full Stack</button>
-					<!-- <button class="tablinks" onclick="portfolioCategory(event, 'uiux')">UI/UX</button> -->
 					<button class="tablinks" onclick="portfolioCategory(event, 'game')">Game/VR/AR</button>
 					<button class="tablinks" onclick="portfolioCategory(event, 'data')">Data</button>
+					<button class="tablinks" onclick="portfolioCategory(event, 'uiux')">UI/UX</button>
 					<button class="tablinks" onclick="portfolioCategory(event, 'anim')">Animation</button>
 					<!-- <button class="tablinks" onclick="portfolioCategory(event, 'article')">Articles</button> -->
 					
