--- a/UXportfolio_hospital.html
+++ b/UXportfolio_hospital.html
@@ -48,6 +48,9 @@
         <link rel="stylesheet" href="css/responsive.css">
 
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+        <script language="JavaScript" type="text/javascript" src="/js/jquery-1.2.6.min.js"></script>
+		<script language="JavaScript" type="text/javascript" src="/js/jquery-ui-personalized-1.5.2.packed.js"></script>
+		<script language="JavaScript" type="text/javascript" src="/js/sprinkle.js"></script>
 	</head>
 
 
