--- a/UXportfolio_hospital.html
+++ b/UXportfolio_hospital.html
@@ -47,7 +47,7 @@
         <!--responsive.css-->
         <link rel="stylesheet" href="css/responsive.css">
 
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+        <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
 
 	</head>
 
