--- a/UXportfolio_hospital.html
+++ b/UXportfolio_hospital.html
@@ -16,7 +16,7 @@
         <title>Debbie Chen</title>
 
         <!-- For favicon png -->
-		<link rel="shortcut icon" type="image/icon" href="assets/logo/favicon.png"/>
+		<!-- <link rel="shortcut icon" type="image/icon" href="assets/logo/favicon.png"/> -->
 		
        
         <!--font-awesome.min.css-->
@@ -47,8 +47,7 @@
         <!--responsive.css-->
         <link rel="stylesheet" href="css/responsive.css">
 
-        <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 	</head>
 
 
@@ -407,6 +406,39 @@
 			
         </footer><!--/.footer-copyright-->
 		<!--footer-copyright end-->
+
+		<!-- Include all js compiled plugins (below), or include individual files as needed -->
+
+		<script src="js/jquery.js"></script>
+        
+        <!--modernizr.min.js-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+		
+		<!--bootstrap.min.js-->
+        <script src="js/bootstrap.min.js"></script>
+		
+		<!-- bootsnav js -->
+		<script src="js/bootsnav.js"></script>
+		
+		<!-- jquery.sticky.js -->
+		<script src="js/jquery.sticky.js"></script>
+		
+		<!-- for progress bar start-->
+
+		<!-- progressbar js -->
+		<script src="js/progressbar.js"></script>
+
+		<!-- appear js -->
+		<script src="js/jquery.appear.js"></script>
+
+		<!-- for progress bar end -->
+
+		<!--owl.carousel.js-->
+        <script src="js/owl.carousel.min.js"></script>
+
+
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+		
 
 
 		<!--Portfolio JS / scrollspy-->
