--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 						<div class="col-sm-6">
 							<div class="single-about-txt">
 								<h3>
-									I am focus on Human Computer Interaction and interested in Front-End Development, Game Design, UI/UX Design and Data Analyst.
+									I am focus on Human Computer Interaction and I am interested in Front-End Development, Game Design, UI/UX Design and Data Analyst.
 								</h3>
 								<p>
 									For me, I especially want to convey interesting knowledge through all the fantastic media, like website, game, XR and technology, so as to empower vulnerable groups to express themselves and receive knowledge.
