change some typos again

--- a/index.html
+++ b/index.html
@@ -128,12 +128,12 @@
 						<div class="col-sm-6">
 							<div class="single-about-txt">
 								<h3>
-									I am focus on Human Computer Interaction and I am interested in Front-End Development, Game Design, UI/UX Design and Data Analyst.
+									My focus on Human Computer Interaction and I am interested in Front-End Development, Game Design, UI/UX Design and Data Analysis.
 								</h3>
 								<p>
-									For me, I especially want to convey interesting knowledge through all the fantastic media, like website, game, XR and technology, so as to empower vulnerable groups to express themselves and receive knowledge.
+									I want to transfer my knowledge through media, sush as websites, games, XR and technology. I want to empower vulnerable groups to express themselves and receive knowledge.
 									<br>
-									I hope I can have chances to explore the possibilities of innovative technology and design a touching game to let people have confidence to break through the existing framework and create their own dreams and future.
+									I hope I can have chance to explore the possibilities of innovative technology and design a touching game to let people have confidence to break through the existing framework and create their own dreams and future.
 								</p>
 								<div class="row">
 									<div class="col-sm-4">
