change some typo again

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 						<div class="col-sm-6">
 							<div class="single-about-txt">
 								<h3>
-									My focus on Human Computer Interaction and I am interested in Front-End Development, Game Design, UI/UX Design and Data Analysis.
+									My focus is on Human Computer Interaction and I am interested in Front-End Development, Game Design, UI/UX Design and Data Analysis.
 								</h3>
 								<p>
 									I want to transfer my knowledge through media, sush as websites, games, XR and technology. I want to empower vulnerable groups to express themselves and receive knowledge.
