revise the resume

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 							<div class="single-horizontal-timeline">
 								<div class="experience-time">
 									<h2>2017 - 2019</h2>
-									<h3>master <span>of </span> computer aid engineering</h3>
+									<h3>master <span>of </span> computer aided engineering</h3>
 								</div><!--/.experience-time-->
 								<div class="timeline-horizontal-border">
 									<i class="fa fa-circle" aria-hidden="true"></i>
