revised the page of smart home portfolio and revised the highlight format

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 										</h4>
 										<h5>Taipei, Taiwan</h5>
 										<p class="description">
-											Learning machince learning and virtual reality, I focus on solving elderly adults living problem by developing ambient assisted living environment.
+											Learning machine learning and virtual reality, I focus on solving elderly adults living problem by developing ambient assisted living environment.
 										</p>
 									</div><!--/.timeline-content-->
 								</div><!--/.timeline-->
