added background and challenge and process image for smart home

--- a/UXportfolio_smarthome.html
+++ b/UXportfolio_smarthome.html
@@ -98,7 +98,8 @@
 			<div id="outline">
 				<ul>
 					<li><a href="#portfolio">Summary</a></li>
-					<li><a href="#Introduction">Introduction</a></li>
+					<li><a href="#Background">Background</a></li>
+					<li><a href="#Challenge">Challenge</a></li>
 					<li><a href="#Process">Process</a></li>
 					<li><a href="#Result">Result</a></li>
 					<li><a href="#Reflection">Reflection</a></li>
@@ -144,7 +145,7 @@
 								<li>Investigated the elderly's needs with Empathy Map and Journey Map</li>
 								<li>Formulated a reasonable scenario in a smart home for simulation</li>
 								<li>Engineered a Virtual Reality(VR) smart home</li>
-								<li>Interviewed 10 older adults with Focus Group and Participatory Design methods</li>
+								<li>Recruited and Interviewed 10 older adults with Focus Group and Participatory Design methods</li>
 								<li>Pioneered in the development of VR for elderly testing </li>
 								<li>Produced a research report with the insight of the IoT future in the eldercare field</li>
 
@@ -227,18 +228,37 @@
 
 		
 
-		<section class="describe" id="Introduction">
-
+		<section class="describe" id="Background">
 			<div>
-				<h2>Introduction</h2>
-				<p>This is a usability testing for Tencent video app. The purpose of this research is to understand how the target group uses Tencent video app and the pleasant experience or difficulties generated during use to help improve future design.</p>
+				<h2>Background</h2>
+				<h3>Older population is growing dramatically now.</h3>
+				<p>Population ageing is a severe problem we need to face for the future world.</p>
+
+				<h3>Installed IoT technology at home may be a great solution!</h3>
+
+				<h3>Virtual Reality may be a fantastic tool for experiencing due to its unique immersive effect.</h3>
+			</div>
+
+		</section>
+
+		<section class="describe" id="Challenge">
+			<div>
+				<h2>Challenge</h2>
+				<h3>Will Ambient Assisted Living(AAL) truly helpful for the elderly?</h3>
+				<li>What is their view of IoT technology? Do they want to accept it or not?</li>
+				<li>How can we design a suitable and user-friendly service for the elderly to live with IoT tech? </li>
+				<li style="margin-bottom: 10px;">How can we get their direct opinions for customizing the service in different situations? </li>
+				<h3>How can we successfully promote new technology for older adults?</h3>
+				<li>Will experience the scenario directly increase their interest in the new technology? </li>
+				<li>Is Virtual Reality mature enough to be a testing or communication tool in the future? </li>
 			</div>
 
 		</section>
 
 		<section class="describe" id="Process">
 			<div>
-				<h2>Process</h2>
+				<h2>Project Process</h2>
+				<img src="img/portfolio/u7_process.png">
 				<h3>hello</h3>
 				<p>hello We observed pedestrians and verified some issues by questionnaires. Based on users’ opinions, we designed “Cue Card”, which integrates light and vibration reminders into original bus cards. In addition to prototyping card’s interface, I also created an Arduino version. After user testing, we published a poster in 2016 TAICHI conference.</p>
 				<h3></h3>
