--- a/UXportfolio_smarthome.html
+++ b/UXportfolio_smarthome.html
@@ -321,6 +321,35 @@
         </footer><!--/.footer-copyright-->
 		<!--footer-copyright end-->
 
+		<script src="js/jquery.js"></script>
+        
+        <!--modernizr.min.js-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+		
+		<!--bootstrap.min.js-->
+        <script src="js/bootstrap.min.js"></script>
+		
+		<!-- bootsnav js -->
+		<script src="js/bootsnav.js"></script>
+		
+		<!-- jquery.sticky.js -->
+		<script src="js/jquery.sticky.js"></script>
+		
+		<!-- for progress bar start-->
+
+		<!-- progressbar js -->
+		<script src="js/progressbar.js"></script>
+
+		<!-- appear js -->
+		<script src="js/jquery.appear.js"></script>
+
+		<!-- for progress bar end -->
+
+		<!--owl.carousel.js-->
+        <script src="js/owl.carousel.min.js"></script>
+
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+
 
 		<!--Portfolio JS / scrollspy-->
         <script src="js/portfolio.js"></script>
