uploaded some pictures for smart home

--- a/UXportfolio_smarthome.html
+++ b/UXportfolio_smarthome.html
@@ -259,10 +259,50 @@
 			<div>
 				<h2>Project Process</h2>
 				<img src="img/portfolio/u7_process.png">
-				<h3>hello</h3>
-				<p>hello We observed pedestrians and verified some issues by questionnaires. Based on users’ opinions, we designed “Cue Card”, which integrates light and vibration reminders into original bus cards. In addition to prototyping card’s interface, I also created an Arduino version. After user testing, we published a poster in 2016 TAICHI conference.</p>
-				<h3></h3>
+				<h3 id="P1">Problem Framing</h3>
 				<p></p>
+
+				<h3 id="P2">Preliminary User Research</h3>
+				<p></p>
+				<div class="container">
+					<div class="row">
+						<div class="col-md-5">
+							<h4>Empathy Map</h4>
+							<p></p>
+						</div>
+						<div class="col-md-7">
+							<img src="img/portfolio/u7_empathy_map.png">
+						</div>
+					</div>
+				</div>
+				<div class="container">
+					<div class="row">
+						<div class="col-md-5">
+							<h4>Journey Map</h4>
+						</div>
+						<div class="col-md-7">
+							<img src="img/portfolio/u7_journey_map.png">
+						</div>
+					</div>
+				</div>
+
+				<h3 id="P3">Design and Implement</h3>
+				<h4>Service Design Blueprint</h4>
+				<img src="">
+				<h4>Smart Home Modeling</h4>
+				<img src="img/portfolio/u7_3D_modeling.png">
+				<h4>VR Environment Building</h4>
+				<img src="">
+
+				<h3 id="P4">Recruit</h3>
+				<p></p>
+
+				<h3 id="P5">Resarch Set Up</h3>
+
+				<h3 id="P6">Qualitive User Research</h3>
+				<h4>Focus Group Interview</h4>
+
+				<h4>Participatory Design</h4>
 
 			</div>
 
@@ -272,7 +312,11 @@
 
 			<div>
 				<h2>Result</h2>
-				<p>hi</p>
+				<h3 id="R1">KANO Analysis</h3>
+				<p></p>
+
+				<h3 id="R2">User Research Report</h3>
+				<p></p>
 			</div>
 
 		</section>
@@ -281,7 +325,11 @@
 
 			<div>
 				<h2>Reflection</h2>
-				<p>hi</p>
+				<h3>What I have learned in the project?</h3>
+				<p></p>
+
+				<h3>What can improve in the future?</h3>
+				<p></p>
 			</div>
 
 
