--- a/UXportfolio_smarthome.html
+++ b/UXportfolio_smarthome.html
@@ -308,7 +308,7 @@
 
 							  <div class="mySlides ">
 							    <div class="numbertext">5 / 5</div>
-							    <img src="img/portfolio/u7_VR04.png" style="width:100%">
+							    <img src="img/portfolio/u7_VR04.png" style="width:100%; max-height: 300px;">
 							    <div class="text">Emergency notification system detection zones</div>
 							  </div>
 
@@ -406,21 +406,22 @@
 
 				<h3 id="P6">Qualitive User Research Process</h3>
 				<div class="container">
-					<div class="row topic">
+					<div class="row step_topic">
 						<div class="col-md-4 ">
 							<h4>Step 1</h4>
-							<p>Focus group interview with the topic of fall experience sharing</p>
 							<img class="step" src="img/portfolio/u7_step1.png">
+							<p>Focus group interview with the topic of fall experience sharing</p>
 						</div>
 						<div class="col-md-4">
 							<h4>Step 2</h4>
-							<p></p>
 							<img class="step" src="img/portfolio/u7_step2.png">
+							<p>Experiencing the VR scenario</p>
 						</div>
 						<div class="col-md-4">
 							<h4>Step 3</h4>
-							<p></p>
 							<img class="step" src="img/portfolio/u7_step3.png">
+							<p>Focus group interview with the topic of the smart home service they experienced before and also did the participatory design to brainstorm how to create a more appropriate service for them to use</p>
+							
 						</div>
 					</div>
 				</div>
