--- a/UXportfolio_smarthome.html
+++ b/UXportfolio_smarthome.html
@@ -128,7 +128,8 @@
 					</div>
 					<div class="col-lg-5">
 						<div class="highlight-img">
-							<img src="img/portfolio/u7_summary.png">
+							<img src="img/portfolio/u7_summary01.png">
+							<img src="img/portfolio/u7_summary02.png">
 						</div>
 					</div>
 				</div>
@@ -198,12 +199,39 @@
 		<section class="describe" id="Background">
 			<div>
 				<h2>Background</h2>
-				<h3>Older population is growing dramatically now.</h3>
-				<p>Population ageing is a severe problem we need to face for the future world.</p>
-
-				<h3>Installed IoT technology at home may be a great solution!</h3>
-
-				<h3>Virtual Reality may be a fantastic tool for experiencing due to its unique immersive effect.</h3>
+				<div class="container">
+					<div class="row">
+						<div class="col-md-7 topic">
+							<h3>Older population is growing dramatically now.</h3>
+							<p>Population ageing is a severe problem we need to face for the future world.</p>
+						</div>
+						<div class="col-md-5">
+							<img src="img/portfolio/u7_background01.png">
+						</div>
+					</div>
+				</div>
+				<div class="container">
+					<div class="row">
+						<div class="col-md-7 topic">
+							<h3>Installed IoT technology at home may be a great solution!</h3>
+							<p></p>
+						</div>
+						<div class="col-md-5">
+							<img src="img/portfolio/u7_background02.png">
+						</div>
+					</div>
+				</div>
+				<div class="container">
+					<div class="row">
+						<div class="col-md-7 topic">
+							<h3>Virtual Reality may be a fantastic tool for experiencing due to its unique immersive effect.</h3>
+							<p></p>
+						</div>
+						<div class="col-md-5">
+							<img src="img/portfolio/u7_background03.png">
+						</div>
+					</div>
+				</div>
 			</div>
 		</section>
 
@@ -445,7 +473,7 @@
 							<h4>VR Service Design Experience </h4>
 						</div>
 						<div class="col-md-8">
-							<img src="img/portfolio/u7_focus_group_interview.png">
+							<img src="img/portfolio/u7_result01.png">
 						</div>
 					</div>
 				</div>
@@ -463,7 +491,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-4 topic">
-							<h4>VR Experience Scenario</h4>
+							<h4>Some Interesting Feedback They Give</h4>
 						</div>
 						<div class="col-md-8">
 							<img src="img/portfolio/u7_focus_group_interview.png">
