redesigned challenge part

--- a/UXportfolio_smarthome.html
+++ b/UXportfolio_smarthome.html
@@ -254,13 +254,25 @@
 		<section class="describe" id="Challenge">
 			<div>
 				<h2>Challenge</h2>
-				<h3>Will Ambient Assisted Living(AAL) truly helpful for the elderly?</h3>
+				<p>According to the U.S. Census Bureau,<span> 11 million </span>, or <span> 28% </span> of people aged 65 and older, lived alone at the time of the census. Lots of research indicated that <span>senior isolation increases the risk of accidental death.</span> </p>
+				<p style="margin-top: -30px;">At the same time, smart home seems to be a appropriate solution to solve this problem. However, will the elderly accept it? </p>
+				<!-- According to the UN World Population Ageing Report in 2013, they projected the senior population would reach <span>21 percent</span>  of the world population, which included <span>2.1 billion</span>  people aged over 60. -->
+				<div style="text-align: center;">
+					<img style="max-height: 300px;" src="img/portfolio/u7_challenge.png">
+				</div>
+				<!-- <h3>Will Ambient Assisted Living(AAL) truly helpful for the elderly?</h3>
 				<li>What is their view of IoT technology? Do they want to accept it or not?</li>
 				<li>How can we design a suitable and user-friendly service for the elderly to live with IoT tech? </li>
 				<li style="margin-bottom: 10px;">How can we get their direct opinions for customizing the service in different situations? </li>
 				<h3>How can we successfully promote new technology for older adults?</h3>
 				<li>Will experience the scenario directly increase their interest in the new technology? </li>
-				<li>Is Virtual Reality mature enough to be a testing or communication tool in the future? </li>
+				<li>Is Virtual Reality mature enough to be a testing or communication tool in the future? </li> -->
+			</div>
+			<h2>Solution</h2>
+			<p>To tackle these challenges, we decided to use <span> VR Smart Home Service Simulation </span> for the elderly due to its unique immersive experience.</p>
+			<div style="text-align: center;">
+				<img style="max-height: 300px;" src="img/portfolio/u7_solution01.gif">
+				<!-- <img style="max-height: 300px;" src="img/portfolio/u7_solution02.gif"> -->
 			</div>
 		</section>
 
