reconstruct preliminary research part

--- a/UXportfolio_smarthome.html
+++ b/UXportfolio_smarthome.html
@@ -280,28 +280,58 @@
 			<div>
 				<h2>Project Process</h2>
 				<img src="img/portfolio/u7_process.png">
-				<h3 id="P1">Problem Framing</h3>
-				<p></p>
 
-				<h3 id="P2">Preliminary User Research</h3>
+				<hr>
+
+				<h3 id="P2">Preliminary Research</h3>
+				<h4>End User Interview</h4>
 				<p></p>
 				<div class="container">
-					<div class="row">
-						<div class="col-md-4 topic">
-							<h4>Empathy Map</h4>
-							<p></p>
+					<div class="row align-items-center">
+						<div class="col-md-6 ">
+							<p>Interviewed with users, we  </p>
 						</div>
-						<div class="col-md-8">
-							<img src="img/portfolio/u7_empathy_map.png">
+						<div class="col-md-6 topic">
+							<img style="max-height: 300px;" src="img/portfolio/u7_preliminary01.png">
 						</div>
 					</div>
 				</div>
 				<div class="container">
 					<div class="row">
-						<div class="col-md-4 topic">
-							<h4>Journey Map</h4>
+						<div class="col-md-6 topic">
+							<h5>Empathy Map</h5>
+							<img style="max-height: 280px;" src="img/portfolio/u7_empathy_map.png">
 						</div>
-						<div class="col-md-8">
+						<div class="col-md-6 topic">
+							<h5>Journey Map</h5>
+							<img src="img/portfolio/u7_journey_map.png">
+						</div>
+					</div>
+				</div>
+
+				<hr>
+
+				<h3 id="P2">Preliminary Research</h3>
+				<h4>Expert Interview</h4>
+				<p></p>
+				<div class="container">
+					<div class="row align-items-center">
+						<div class="col-md-6 ">
+							<p>Interviewed with experts, we  </p>
+						</div>
+						<div class="col-md-6 topic">
+							<img style="max-height: 300px;" src="img/portfolio/u7_preliminary02.png">
+						</div>
+					</div>
+				</div>
+				<div class="container">
+					<div class="row">
+						<div class="col-md-6 topic">
+							<h5>Smart Home Technology</h5>
+							<img style="max-height: 280px;" src="img/portfolio/u7_empathy_map.png">
+						</div>
+						<div class="col-md-6 topic">
+							<h5>Technology that can solve pain point</h5>
 							<img src="img/portfolio/u7_journey_map.png">
 						</div>
 					</div>
