uploaded some pictures

--- a/UXportfolio_smarthome.html
+++ b/UXportfolio_smarthome.html
@@ -98,7 +98,6 @@
 			<div id="outline">
 				<ul>
 					<li><a href="#portfolio">Summary</a></li>
-					<!-- <li><a href="#Background">Background</a></li> -->
 					<li><a href="#Challenge">Challenge</a></li>
 					<li><a href="#Process">Process</a></li>
 					<li><a href="#Result">Result</a></li>
@@ -138,8 +137,6 @@
 				<div class="row row-summary" >
 					<div class="col-md-5">
 						<div class="summary">	
-							<!-- <p>Cooperated with NTU iNsight Team, Architecture and Building Research Institute released <a href="https://yuan.gitbook.io/smarthome-guideline-for-elderly/">"A Smart Home Design Guide for Eldercare"</a> in Taiwan, hope to facilitate the IoT industry in the eldercare field. </p>
-							<br> -->
 							<p>The primary purpose of the research is to understand the elderly's acceptance of the IoT and smart home technology. Besides, as we used virtual reality to be a novel testing tool for older adults, we want to evaluate whether VR can be a possible solution for experiencing service in the future. </p>
 						</div>
 					</div>
@@ -176,8 +173,9 @@
 							<ul>Preliminary research</ul>
 								<li>Empathy Map</li>
 								<li>Journey Map</li>
-							<ul>Service Design</ul>
+							<ul>Ideation</ul>
 								<li>Service Blueprint</li>
+							<ul>Prototype</ul>
 								<li>Sketch Up</li>
 								<li>Vritual Reality with Unity</li>
 							<ul>User research</ul>
@@ -271,7 +269,7 @@
 			<h2>Solution</h2>
 			<p>To tackle these challenges, we decided to use <span> VR Smart Home Service Simulation </span> for the elderly due to its unique immersive experience.</p>
 			<div style="text-align: center;">
-				<img style="max-height: 300px;" src="img/portfolio/u7_solution01.gif">
+				<img style="max-height: 300px;" src="img/portfolio/u7_solution02.gif">
 				<!-- <img style="max-height: 300px;" src="img/portfolio/u7_solution02.gif"> -->
 			</div>
 		</section>
@@ -328,11 +326,11 @@
 					<div class="row">
 						<div class="col-md-6 topic">
 							<h5>Smart Home Technology</h5>
-							<img style="max-height: 280px;" src="img/portfolio/u7_empathy_map.png">
+							<img style="max-height: 280px;" src="img/portfolio/u7_smart_home_tech.png">
 						</div>
 						<div class="col-md-6 topic">
 							<h5>Technology that can solve pain point</h5>
-							<img src="img/portfolio/u7_journey_map.png">
+							<img style="max-height: 280px;" src="img/portfolio/u7_pain_tech.png">
 						</div>
 					</div>
 				</div>
@@ -488,7 +486,7 @@
 							<p>Interviewed with users, we  </p>
 						</div>
 						<div class="col-md-6 topic">
-							<img style="max-height: 300px;" src="img/portfolio/u7_preliminary01.png">
+							<img style="max-height: 300px;" src="img/portfolio/u7_result01.png">
 						</div>
 					</div>
 				</div>
@@ -536,7 +534,7 @@
 							<p>Interviewed with users, we  </p>
 						</div>
 						<div class="col-md-6 topic">
-							<img style="max-height: 300px;" src="img/portfolio/u7_preliminary01.png">
+							<img style="max-height: 300px;" src="img/portfolio/u7_result02.png">
 						</div>
 					</div>
 				</div>
@@ -578,7 +576,7 @@
 							<p>Interviewed with users, we  </p>
 						</div>
 						<div class="col-md-6 topic">
-							<img style="max-height: 300px;" src="img/portfolio/u7_preliminary01.png">
+							<img style="max-height: 300px;" src="img/portfolio/u7_solution01.gif">
 						</div>
 					</div>
 				</div>
@@ -590,8 +588,8 @@
 						<div class="col-md-6 ">
 							<p>Interviewed with users, we  </p>
 						</div>
-						<div class="col-md-6 topic">
-							<img style="max-height: 300px;" src="img/portfolio/u7_preliminary01.png">
+						<div class="col-md-6 ">
+							<p>Interviewed with users, we  </p>
 						</div>
 					</div>
 				</div>
