update kano analysis

--- a/UXportfolio_smarthome.html
+++ b/UXportfolio_smarthome.html
@@ -472,12 +472,16 @@
 				</div>
 				<h4>KANO Analysis</h4>
 				<div class="container">
-					<div class="row align-items-center">
-						<div class="col-md-6 ">
-							<p>Interviewed with users, we  </p>
+					<div class="row align-items-center" style="margin-bottom: 3vh;">
+						<div class="col-md-6 paragraph">
+							<p>In terms of KANO Analysis, we can split our service into 9 features. Although <span> all 9 features turned out to be Attractive Features </span>, there are still some insights in there.</p>
+							<li>We can see that users think <span> the voice assistant for waking up and going to sleep, smart lighting system, and emergency notification </span> are the most attractive features for them to use.</li>
+							<li>The second attractive features are the guidance with Smart Mat and the voice assistant for water leak alert. </li>
+							<li>The last priority is the voice assistant for waiting for a while to avoid dizzy before standing up. <span> Users seem to have no patience to pause and think it might be unnecessary.</span></li>
+
 						</div>
 						<div class="col-md-6 topic">
-							<img style="max-height: 300px;" src="img/portfolio/u7_preliminary01.png">
+							<img style="max-height: 300px;" src="img/portfolio/u7_KANO.png">
 						</div>
 					</div>
 				</div>
